Fix main text alignment in Chinese
In Chinese there is no justification for text. Fix #1.

--- a/Doc/tools/pydoctheme/static/pydoctheme.css
+++ b/Doc/tools/pydoctheme/static/pydoctheme.css
@@ -181,3 +181,8 @@ div.footer a:hover {
     background: none !important;
 }
 
+/* Fix main text alignment in Chinese translation */
+div.body p, div.body dd, div.body li, div.body blockquote {
+    text-align: left;
+}
+Doc/locale/zh_Hant/LC_MESSAGES/library/stdtypes.po
